[package]
authors = ["Hollow Man <hollowman@opensuse.org>"]
categories = ["text-processing", "command-line-interface"]
description = "A backend for mdBook written in Rust for generating PDF based on headless chrome and Chrome DevTools Protocol"
edition = "2021"
homepage = "https://hollowmansblog.wordpress.com/2022/01/30/mdbook-pdf-a-mdbook-backend-for-generating-pdf-files/"
keywords = ["book", "mdbook", "rustbook", "pdf"]
license = "GPL-3.0"
name = "mdbook-pdf"
readme = "README.md"
repository = "https://github.com/HollowMan6/mdbook-pdf"
version = "0.1.8"
include = ["**/*.rs", "Cargo.toml"]

[dependencies]
anyhow = "1"
env_logger = "0"
lazy_static = "1"
lopdf = "0.31"
mdbook = "0"
mdbook-pdf-headless_chrome = "0"
regex = "1"
scraper = "0.18"
serde = "1"
serde_derive = "1"

[features]
# Enables auto fetching chromium support.
fetch = ["mdbook-pdf-headless_chrome/fetch"]
